# steelseries-arctis-7-battery

./: Cargo.toml  README.me
etc/udev/rules.d/: 50-headsets.rules
src/: main.rs
