[package]
name = "steelseries-arctis-seven"
version = "0.1.0"
authors = ["Daniel Liljeberg <liljebergxyz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }